# archive-instagram

./: .gitignore  README.md  pyproject.toml  requirements.txt
01-get-instagram-posts/: accounts.txt
02-build-pages/: build-html-from-db.py  build-html.py  create-db.R  extract-profile-infos.R  get-connection-functions.R  setup.R
build-pages/: build-html.py  test.ipynb
static/css/: styles.css
templates/: account.html  base.html  feed.html  feed_month.html  index.html  post.html  post_template.html
